--- a/src/style/sample.scss
+++ b/src/style/sample.scss
@@ -1,11 +1,13 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:600");
-
-#app{
+// main.styl
+#app {
     font-family: 'Roboto', 'Open Sans', 'sans-serif';
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-align: center;
-    color: #2c3e50;
-    margin-top: 60px;
-    background-color: #f2f2f2
+    background-color: #d3d9eb;
+}
+
+#content {
+    padding-top: 75px;
 }
