--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -3,3 +3,9 @@ $color-grey-dark: #777;
 $color-white: #fff;
 $color-black: #000;
 $color-background: #d3d9eb;
+//
+$grid-width: 114rem;
+$gutter-vertical: 8rem;
+$gutter-vertical-small: 6rem;
+$gutter-horizontal: 6rem;
+
